feat: 大数管理页面完成

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>c fund tool</title>
+  <title>大数管理</title>
   <link rel="stylesheet" type="text/css" href="static/easyui/themes/default/easyui.css"/>
   <link rel="stylesheet" type="text/css" href="static/easyui/themes/icon.css"/>
   <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
