--- a/src/main/webapp/dashu/index.html
+++ b/src/main/webapp/dashu/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" type="text/css" href="../static/easyui/themes/default/easyui.css" />
   <link rel="stylesheet" type="text/css" href="../static/easyui/themes/icon.css" />
   <link rel="stylesheet" type="text/css" href="../static/css/global.css" />
-  <link rel="stylesheet" type="text/css" href="../static/css/data.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/dashu.css" />
   <script type="text/javascript" src="../static/easyui/jquery.min.js"></script>
   <script type="text/javascript" src="../static/easyui/jquery.easyui.min.js"></script>
   <script type="text/javascript" src="../static/easyui/locale/easyui-lang-zh_CN.js"></script>
+  <script type="text/javascript" src="../static/js/sb.js"></script>
   <script type="text/javascript" src="../static/js/dashu.js"></script>
 </head>
 <body>
@@ -17,11 +18,100 @@
 
 <div id="tb">
   <div>
-    <select class="easyui-combobox" id="s_date" name="s_date" panelHeight="auto" data-options="prompt:'日期'"/>
+
+    <a href="javascript:openAddDialog()" class="easyui-linkbutton" iconCls="save">添加</a>
+    <a href="javascript:openModifyDialog()" class="easyui-linkbutton" iconCls="update">修改</a>
+    <a href="javascript:deleteDashu()" class="easyui-linkbutton" iconCls="delete">删除</a>
+
     <input type="text" id="s_name"  class="easyui-textbox"  data-options="prompt:'股票名称'" />
     <a href="javascript:searchData()" class="easyui-linkbutton" iconCls="search">搜索</a>
   </div>
 </div>
 
+<div id="dlg" class="easyui-dialog" closed="true" buttons="#dlgTb">
+  <form method="post" id="fm">
+    <table cellspacing="8px">
+      <tr>
+        <td>大数组合:</td>
+        <td>
+          <select class="easyui-combobox" id="dashuId" name="dashuId" panelHeight="auto" data-options="prompt:'大数组合'"/>
+        </td>
+      </tr>
+      <tr>
+        <td>股票名称:</td>
+        <td><input id="name" name="name" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>股票代号:</td>
+        <td><input id="code" name="code" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>细分行业:</td>
+        <td><input id="industry" name="industry" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>PB:</td>
+        <td><input id="pb" name="pb" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>PB得分:</td>
+        <td><input id="pbScore" name="pbScore" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>PE:</td>
+        <td><input id="peTtm" name="peTtm" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>PE得分:</td>
+        <td><input id="peTtmScore" name="peTtmScore" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>涨幅得分:</td>
+        <td><input id="chgScore" name="chgScore" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>商誉:</td>
+        <td><input id="businessReputation" name="businessReputation" value="PASS" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>无形资产:</td>
+        <td><input id="invisibleAssets" name="invisibleAssets" value="0.1" data-options="precision:2" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>股权质押:</td>
+        <td><input id="stockMortgage" name="stockMortgage" value="PASS" type="text" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>财务分析:</td>
+        <td><input id="financial" name="financial" type="text" value="PASS" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>ROE:</td>
+        <td><input id="roe" name="roe" type="text" data-options="precision:2" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>一年低价:</td>
+        <td><input id="minPrice" name="minPrice" type="text" data-options="precision:2" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>股息率:</td>
+        <td><input id="dividend" name="dividend" type="text" data-options="precision:2" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>买入价:</td>
+        <td><input id="bugPrice" name="bugPrice" type="text" data-options="precision:2" class="easyui-textbox"/></td>
+      </tr>
+      <tr>
+        <td>投入资金:</td>
+        <td><input id="hold" name="hold" type="text" class="easyui-textbox"/></td>
+      </tr>
+    </table>
+  </form>
+</div>
+
+<div id="dlgTb">
+  <a href="javascript:saveData()" class="easyui-linkbutton" iconCls="save">保存</a>
+  <a href="javascript:closeDlg()" class="easyui-linkbutton" iconCls="icon-closed">关闭</a>
+</div>
 </body>
 </html>
